--- a/README.Rmd
+++ b/README.Rmd
@@ -25,12 +25,13 @@ You can install the stable version on [CRAN](http://cran.r-project.org/package=p
 install.packages('pollstR', dependencies = TRUE)
 ```
 
-To install the very latest version, since the CRAN version use **devtools**,
-
+To install the latest version:
 ```{r eval=FALSE}
 library("devtools")
 install_github("rOpenGov/pollstR")
 ```
+
+**NOTE: The current dev version is backwards incompatible. Huffpost Pollster upgraded their [API]( http://elections.huffingtonpost.com/pollster/api/v2) and pollstR was rewritten from scratch for it**
 
 ## Usage
 
