--- a/vignettes/examples.Rmd
+++ b/vignettes/examples.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Pollster Examples"
+title: "PollstR Usage"
 author: "Jeffrey Arnold"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{PollstR Usage}
   %\VignetteEncoding{UTF-8}
 ---
 
